--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </article>
         </div>
-        <h2 id="prices">Ціни</h2>
+        <h2 id="price-list">Ціни</h2>
         <table>
             <thead>
                 <tr>
@@ -162,6 +162,9 @@
             <input type="submit">
         </form>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
