--- a/index.html
+++ b/index.html
@@ -150,20 +150,35 @@
         </table>
         <h2 id="group-tours">Екскурсії</h2>
         <div class="group-tours">
-            
+            <h4>АКЦІЯ! Знижка 50% для школярів і студентів</h4>
+             <div id="clockdiv">
+            <div>    
+         <span class="days"></span>
+        <div class="smalltext">Days</div>
+        </div>
+        <div>
+        <span class="hours"></span>
+        <div class="smalltext">Hours</div>
+        </div>
+        <div>
+        <span class="minutes"></span>
+        <div class="smalltext">Minutes</div>
+        </div>
+        <div>
+        <span class="seconds"></span>
+        <div class="smalltext">Seconds</div>
+        </div>
+        </div>
             <p>
                 Проводимо екскурсії у місті Лева , для дітей і дорослих ,центром міста і у парках, на роверах.
                 Напишіть нам і ми створимо незабутню атмосферу,проїдемо вуличками старого міста,відвідаємо цікаві
                 локації,проведемо час з користю на свіжому повітрі . Leo Velo
             </p>
         </div>
-        <h2 id="about-us">Про нас</h2>
+        <h2 id="about-us">Про нас </h2>
+        <h5>Leo Velo Ми команда яка 24/7/365 на роверах.Давай з нами,буде круто!  </h5>
         <div class="about-us">
             
-            <p>
-                Leo Velo
-                Ми команда яка 24/7/365 на роверах.Давай з нами 
-            </p>
         </div>
     </main>
     <footer>
