--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <h1>Прокат велосипедів</h1>
             <div class="social__block">
                 <div class="social facebook">
-                    <a href="#" target="_blank">
+                    <a href="https://www.facebook.com/" target="_blank">
                         <svg role="img" viewBox="0 0 320 512">
                             <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
                         </svg>
                     </a>
                 </div>
                 <div class="social skype">
-                    <a href="#" target="_blank">
+                    <a href="https://www.skype.com/uk/" target="_blank">
                         <svg role="img" viewBox="0 0 448 512">
                             <path fill="currentColor" d="M424.7 299.8c2.9-14 4.7-28.9 4.7-43.8 0-113.5-91.9-205.3-205.3-205.3-14.9 0-29.7 1.7-43.8 4.7C161.3 40.7 137.7 32 112 32 50.2 32 0 82.2 0 144c0 25.7 8.7 49.3 23.3 68.2-2.9 14-4.7 28.9-4.7 43.8 0 113.5 91.9 205.3 205.3 205.3 14.9 0 29.7-1.7 43.8-4.7 19 14.6 42.6 23.3 68.2 23.3 61.8 0 112-50.2 112-112 .1-25.6-8.6-49.2-23.2-68.1zm-194.6 91.5c-65.6 0-120.5-29.2-120.5-65 0-16 9-30.6 29.5-30.6 31.2 0 34.1 44.9 88.1 44.9 25.7 0 42.3-11.4 42.3-26.3 0-18.7-16-21.6-42-28-62.5-15.4-117.8-22-117.8-87.2 0-59.2 58.6-81.1 109.1-81.1 55.1 0 110.8 21.9 110.8 55.4 0 16.9-11.4 31.8-30.3 31.8-28.3 0-29.2-33.5-75-33.5-25.7 0-42 7-42 22.5 0 19.8 20.8 21.8 69.1 33 41.4 9.3 90.7 26.8 90.7 77.6 0 59.1-57.1 86.5-112 86.5z"/>
                         </svg>
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div class="social youtube">
-                    <a href="#" target="_blank">
+                    <a href="https://www.youtube.com/watch?v=2Riuss01jQg" target="_blank">
                         <svg role="img" viewBox="0 0 576 512">
                             <path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"/>
                         </svg>
@@ -94,8 +94,8 @@
                 </div>
             </article>
             <article>
-                <h3>Для дітей</h3>
-                <img src="img/cube-kids.jpeg" alt="Для дітей">
+                <h3>Дитячий</h3>
+                <img src="img/cube-kids.jpeg" alt="Дитячий">
                 <div class="buttons">
                     <button>Інфо</button>
                 </div>
@@ -134,7 +134,7 @@
                 <td>1900</td>
             </tr>
             <tr>
-                <td>Для дітей</td>
+                <td>Дитячий</td>
                 <td>5</td>
                 <td>50</td>
                 <td>250</td>
